<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrderOnline-B</string>
    <string name="cd_img">image</string>
    <string name="text_dummytext">Dummy text</string>
    <string name="text_largedummytext">Lorem Ipsum has been the industrys standard dummy 
        text ever since the 1500s when an unknown printer took a galley of type and 
        scrambled it to make a type specimen book.</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="success">Success</string>
    <string name="OK">OK</string>
    
    <!-- Title Specific Strings -->
    <string name="title_signin">Sign In</string>
    <string name="text_title_register">Register</string>
    <string name="text_title_forgot_pwd">Forgot Password</string>
    <string name="text_title_reset_pwd">Reset Password</string>
    <string name="text_title_new_order">New Order</string>
    <string name="text_title_orders">Orders</string>
    <string name="text_title_new_order_details">Order Detail</string>
    <string name="text_title_chat">Chat</string>
    
    <string name="text_title_menu">Menu</string>
    <string name="text_title_profile">Profile</string>
    
    <!-- Watermark Specific Strings -->
    <string name="text_watermark_phonenumber"><i>phonenumber*</i></string>
    <string name="text_watermark_password"><i>password*</i></string>
    <string name="text_watermark_regphonenumber"><i>registered phonenumber*</i></string>
    <string name="text_watermark_otpcode"><i>OTP code*</i></string>
    <string name="text_watermark_newpassword"><i>new password*</i></string>
    <string name="text_watermark_confirmpassword"><i>confirm password*</i></string>
    <string name="text_watermark_restaurantname"><i>restaurant name*</i></string>
    <string name="text_watermark_address"><i>address*</i></string>
    <string name="text_watermark_pincode"><i>pincode</i></string>
    <string name="text_watermark_email"><i>email*</i></string>
    <string name="text_watermark_service_start_time"><i>service start time*</i></string>
    <string name="text_watermark_service_close_time"><i>service close time*</i></string>
    <string name="text_watermark_category_name"><i>category name*</i></string>
    <string name="text_watermark_item_name"><i>item name*</i></string>
    <string name="text_watermark_item_price"><i>price*</i></string>
    <string name="text_watermark_deliverytime"><i>in mins*</i></string>
    <string name="text_watermark_write_here"><i>write here*</i></string>
    
    
    <!-- Action Button Specific Strings -->
    <string name="text_button_signin">Sign In</string>
    <string name="text_button_forgotpwd">Forgot Password</string>
    <string name="text_button_register">New user? Register here</string>
    <string name="text_button_submit">Submit</string>
    <string name="text_button_validate">Validate</string>
    <string name="text_button_next">Next</string>
    <string name="text_button_accept_order">Accept</string>
    <string name="text_button_reject_order">Reject</string>
    <string name="text_button_done">Done</string>
    <string name="text_button_addcategory">Add Category</string>
    <string name="text_button_send">Send</string>
    
    <!-- Splash Specific Strings -->
    <string name="text_splash_version">Version </string>
    
    <!-- Login Specific Strings -->
    <string name="text_login_rememberme">Remember me</string>
    <string name="text_login_empty_credentials">Please enter valid credentials and try again.</string>
    
    <!-- Forgot Password Specific Strings -->
    <string name="text_login_forgotpwd_details">We will send you a text message with a code to help you reset your password.</string>
    
    <!-- Signup Specific Strings -->
    <string name="text_signup_validateotp_details">Please enter the OTP sent to your mobile number.</string>
  
    <string name="text_signup_storecontactdetails">Contact Details</string>
    
    
    <!-- Profile Edit Specific Strings -->
    <string name="text_editprofile_restaurantdetails">Restaurant Details</string>
    <string name="text_editprofile_taptouploadimage">Tap to upload image.</string>
    <string name="text_editprofile_country"><i>country*</i></string>
    <string name="text_editprofile_state"><i>state*</i></string>
    <string name="text_editprofile_city"><i>city*</i></string>
    <string name="text_editprofile_closedon"><i>closed on*</i></string>
    <string name="text_editprofile_alphabet_monday">M</string>
    <string name="text_editprofile_alphabet_tuesday">T</string>
    <string name="text_editprofile_alphabet_wednesday">W</string>
    <string name="text_editprofile_alphabet_thursday">T</string>
    <string name="text_editprofile_alphabet_friday">F</string>
    <string name="text_editprofile_alphabet_saturday">S</string>
    <string name="text_editprofile_alphabet_sunday">S</string>
    <string name="text_editprofile_cuisines"><i>cuisines*</i></string>
    
    <!-- Legal Specific Strings -->
    <string name="text_legaldetails">Legal Details</string>
    <string name="text_legal_required">Please select all.</string>
    
    <!-- Cuisines Specific Strings -->
    <string name="text_cuisinesdetails">Cusinies Details</string>
    
    <!-- FillForm Specific Strings -->
    <string-array name="fillform_tabs_array">
        <item>Cuisines</item>
        <item>Menu</item>
    </string-array>
    <string name="text_fillrestarantdetails_fields_mandatory">Please fill required fields.</string>
    
    <!-- Menu Specific Strings -->
    <string name="text_menudetails">Menu Details</string>
    
    <!-- Add Categories Specific Strings -->
    <string name="text_addcategories_add">Add</string>
	<string name="text_addcategories_cancel">Cancel</string>
	<string name="text_addcategories_categorydetails">Categories Details</string>
	
	<!-- Add MenuItem Specific Strings -->
    <string name="text_addmenuitems_add">Add</string>
	<string name="text_addmenuitems_cancel">Cancel</string>
	<string name="text_addmenuitems_menuitemdetails">MenuItem Details</string>
	<string name="text_addmenuitems_veg">veg</string>
	<string name="text_addmenuitems_nonveg">non-veg</string>
    
    <!-- Home Specific Strings -->
    <string-array name="drawer_items_array">
        <item>Feedback</item>
        <item>Terms</item>
        <item>About</item>
        <item>Logout</item>
        <item>Test Order</item>
    </string-array>
    <string-array name="drawer_icons_array">
        <item>@drawable/drawer_about</item>
        <item>@drawable/drawer_about</item>
        <item>@drawable/drawer_about</item>
        <item>@drawable/drawer_about</item>
        <item>@drawable/drawer_about</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="text_home_profile_menu">Profile</string>
    <string name="text_home_main_menu">Menu</string>
    
    <!-- Profile Specific Strings -->
    <string-array name="profile_tabs_array">
        <item>Details</item>
        <item>Reviews</item>
    </string-array>
    <string name="text_profile_edit_menu">Edit</string>
    
    <!-- Order Specific Strings -->
    <string name="text_orderdetails">Order Details</string>
    <!-- <string name="text_customerdetails">Customer Details</string> -->
    <string name="text_customerdetailsback">Customer Details Back</string>
    <string name="text_customerdetailsfront">Customer Details Front</string>
    <string name="text_bill_amount"><b>Bill Amount</b></string>
    <string name="text_pending_orders">You have orders pending for approval.</string>
    <string name="text_expected_delivery_time">Expected Delivery Time</string>
    <string name="text_decline_reason">Reason</string>
    <string name="text_order_done">Done</string>
	<string name="text_order_cancel">Cancel</string>
	<string name="text_order_set">Set</string>
    
    <string name="error_no_network_connection">Please check your network services.</string>

</resources>
