<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textview_restaurant_details"
            style="@style/H1TextViewStyle"
            android:text="@string/text_editprofile_restaurantdetails" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/items_horizontal_margin"
            android:layout_marginRight="@dimen/items_horizontal_margin"
            android:background="#d8d9d8" />

        <TextView
            android:id="@+id/imageview_restaurant"
            style="@style/H1TextViewStyle"
            android:drawableLeft="@drawable/ic_default_image"
            android:text="@string/text_editprofile_taptouploadimage" />

        <EditText
            android:id="@+id/edittext_profile_restaurantname"
            style="@style/H2EditTextStyle"
            android:hint="@string/text_watermark_restaurantname"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/edittext_profile_address"
            style="@style/H2EditTextStyle"
            android:hint="@string/text_watermark_address"
            android:inputType="text" >
        </EditText>
        
        <EditText
            android:id="@+id/edittext_profile_pincode"
            style="@style/H2EditTextStyle"
            android:hint="@string/text_watermark_pincode"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/textview_profile_selectcountry"
            style="@style/H2TextViewStyle"
            android:text="@string/text_editprofile_country" />

        <Spinner
            android:id="@+id/spinner_profile_country"
            style="@style/SpinnerStyle" />

        <TextView
            android:id="@+id/textview_profile_selectstate"
            style="@style/H2TextViewStyle"
            android:text="@string/text_editprofile_state" />

        <Spinner
            android:id="@+id/spinner_profile_state"
            style="@style/SpinnerStyle" />

        <TextView
            android:id="@+id/textview_profile_selectcity"
            style="@style/H2TextViewStyle"
            android:text="@string/text_editprofile_city" />

        <Spinner
            android:id="@+id/spinner_profile_city"
            style="@style/SpinnerStyle" />
        
        <EditText
            android:id="@+id/edittext_profile_phonenumber"
            style="@style/H2EditTextStyle"
            android:hint="@string/text_watermark_phonenumber"
            android:inputType="phone">
        </EditText>
        
    	<EditText
            android:id="@+id/edittext_profile_email"
            style="@style/H2EditTextStyle"
            android:hint="@string/text_watermark_email"
            android:inputType="textEmailAddress">
        </EditText>
        
        <TextView
            android:id="@+id/btn_next"
            style="@style/commonButttonStyle"
            android:gravity="center_vertical|fill_vertical|center_horizontal|fill_horizontal"
            android:text="@string/text_button_next" />

    </LinearLayout>

</ScrollView>