<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color">
    
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    
    <EditText
        android:id="@+id/edittext_reset_otpcode"
        style="@style/H1EditTextStyle"
        android:drawableRight="@drawable/ic_device_access_accounts"
        android:hint="@string/text_watermark_otpcode"
        android:inputType="phone"
        android:maxLength="6" >

    </EditText>
    
    <EditText
        android:id="@+id/edittext_reset_password_newpwd"
        style="@style/H1EditTextStyle"
        android:drawableRight="@drawable/ic_device_access_accounts"
        android:hint="@string/text_watermark_newpassword"
        android:inputType="textPassword" >

    </EditText>
    
    <EditText
        android:id="@+id/edittext_reset_password_confirmpwd"
        style="@style/H1EditTextStyle"
        android:drawableRight="@drawable/ic_device_access_accounts"
        android:hint="@string/text_watermark_confirmpassword"
        android:inputType="textPassword" >

    </EditText>
    
    <TextView
        android:id="@+id/btn_resetpwd_submit"
        style="@style/ButtonStyle"
        android:text="@string/text_button_submit"/>
    
    </LinearLayout>

</ScrollView>