<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color">
    
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    
    <EditText
        android:id="@+id/edittext_register_contactno"
        style="@style/commonEditTextStyle"
        android:drawableRight="@drawable/ic_device_access_call"
        android:ems="10"
        android:hint="@string/text_watermark_phonenumber"
        android:inputType="phone" >

    </EditText>
    
    <EditText
        android:id="@+id/edittext_register_password"
        style="@style/commonEditTextStyle"
        android:drawableRight="@drawable/ic_device_access_accounts"
        android:ems="10"
        android:hint="@string/text_watermark_password"
        android:inputType="textPassword" >

    </EditText>
    
    <TextView
        android:id="@+id/btn_submit"
        style="@style/commonButttonStyle"
        android:text="@string/text_button_submit"/>
    
    </LinearLayout>

</ScrollView>